--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <link rel="icon" type="image/ico" href="./favicon.ico"/>
     <meta
       name="description"
       content="Movies explorer - сервис, в котором можно найти фильмы по запросу и сохранить в личном кабинете."
@@ -13,5 +14,6 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <div id="modal"></div>
   </body>
 </html>
