--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
-<!doctype html><html lang="ru"><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><link rel="icon" type="image/ico" href="./favicon.ico"/><meta name="description" content="Movies explorer - сервис, в котором можно найти фильмы по запросу и сохранить в личном кабинете."/><title>Movies explorer</title><script defer="defer" src="/static/js/main.bd952150.js"></script><link href="/static/css/main.cf21b5f4.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div><div id="modal"></div></body></html>
+<!DOCTYPE html>
+<html lang="ru">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <link rel="icon" type="image/ico" href="./favicon.ico" />
+    <meta
+      name="description"
+      content="Movies explorer - сервис, в котором можно найти фильмы по запросу и сохранить в личном кабинете."
+    />
+    <title>Movies explorer</title>
+    <script defer="defer" src="/static/js/main.bd952150.js"></script>
+    <link href="/static/css/main.cf21b5f4.css" rel="stylesheet" />
+  </head>
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+    <div id="modal"></div>
+  </body>
+</html>
