--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
       content="Movies explorer - сервис, в котором можно найти фильмы по запросу и сохранить в личном кабинете."
     />
     <title>Movies explorer</title>
-    <script defer="defer" src="/static/js/main.bd952150.js"></script>
-    <link href="/static/css/main.cf21b5f4.css" rel="stylesheet" />
+    <script defer="defer" src="./static/js/main.bd952150.js"></script>
+    <link href="./static/css/main.cf21b5f4.css" rel="stylesheet" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
